Modernize maintenance database reflection